--- a/config/database.yml
+++ b/config/database.yml
@@ -23,7 +23,7 @@ default: &default
 
 development:
   <<: *default
-  database: react_rails_router_development
+  database: rails_react_starter_w_authentication_development
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
@@ -57,7 +57,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: react_rails_router_test
+  database: rails_react_starter_w_authentication_test
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -80,6 +80,6 @@ test:
 #
 production:
   <<: *default
-  database: react_rails_router_production
-  username: react_rails_router
-  password: <%= ENV['REACT_RAILS_ROUTER_DATABASE_PASSWORD'] %>
+  database: rails_react_starter_w_authentication_production
+  username: rails_react_starter_w_authentication
+  password: <%= ENV['RAILS_REACT_STARTER_DATABASE_PASSWORD'] %>
