--- a/client/package.json
+++ b/client/package.json
@@ -7,13 +7,12 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.20.0",
+    "bootstrap": "^4.5.3",
     "devise-axios": "^1.0.24",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3",
-    "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^1.2.1"
+    "react-scripts": "3.4.3"
   },
   "proxy": "http://localhost:3001",
   "scripts": {
