--- a/client/package.json
+++ b/client/package.json
@@ -9,8 +9,12 @@
     "axios": "^0.20.0",
     "bootstrap": "^4.5.3",
     "devise-axios": "^1.0.24",
+    "filepond": "^4.21.1",
+    "filepond-plugin-image-exif-orientation": "^1.0.9",
+    "filepond-plugin-image-preview": "^4.6.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-filepond": "^7.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3"
   },
